Bug 417635 - Selecting Data --> Validity and applying rules freezes the application indefinitely
Summary: Selecting Data --> Validity and applying rules freezes the application indefi...
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Sheets (KSpread) Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-14 13:17 UTC by Marcus Harrison
Modified: 2020-05-30 17:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcus Harrison 2020-02-14 13:17:20 UTC
SUMMARY
The validation function freezes Calligra Sheets until the user kills the application. This was tested with multiple types of cell selections (infinite/limited), with and without data and with both the number type and list type validations.

STEPS TO REPRODUCE
1. Open Calligra. Create a new blank worksheet.
2. Go to Data --> Validity (note that on first opening the document, a single empty cell - A1 - is pre-selected).
3. Select a valid Validity (e.g. integer equal to 1, list of strings)

OBSERVED RESULT
The application freezes and consumes CPU until it is killed.

EXPECTED RESULT
Apply the validation.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.18
KDE Plasma Version: 5.18.0
KDE Frameworks Version: 5.67.0
Qt Version: 5.13.2
Kernel Version: 5.3.0-28-generic
OS Type: 64-bit
Processors: 12 × Intel® Core™ i7-9750H CPU @ 2.60GHz
Memory: 31,1 GiB of RAM
Comment 1 Tomas Mecir 2020-05-30 17:10:59 UTC
Git commit 7ca7e41326877ef8b0a0c255bb92c684a3c1f621 by Tomas Mecir.
Committed on 30/05/2020 at 16:29.
Pushed by mecir into branch 'master'.

Fix endless loop in the validity dialog.

M  +0    -2    sheets/dialogs/ValidityDialog.cpp

https://invent.kde.org/office/calligra/commit/7ca7e41326877ef8b0a0c255bb92c684a3c1f621