Fix endless loop in the validity dialog.

BUG: 417635